# python_boilerplate

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Pipfile  README.md  logging.conf  pyproject.toml  setup.cfg
.github/actions/project-environment-setup/: action.yml
.github/workflows/: build-and-test.yml  main.yml  publish-docker.yml  python-ci-with-poetry.yml  test.yml  twitter-together.yml
.github/workflows/actions/: project-environment-setup.yml
python_boilerplate/: __init__.py  __main__.py  function_collection.py  logging.conf
python_boilerplate/common/: asynchronization.py  common_function.py  debounce_throttle.py  function_execution_time.py  orm.py  profiling.py  trace.py
python_boilerplate/configuration/: application_configuration.py  apscheduler_configuration.py  loguru_configuration.py  peewee_configuration.py  thread_pool_configuration.py
python_boilerplate/data_migration/video_game/: data_initialization_dml.py
python_boilerplate/demo/: async_demo.py  async_usage.py  multithread_and_thread_pool_usage.py  pandas_usage.py  pgp_usage.py  pydantic_usage.py  python_dependency_size.py  strategy_design_pattern_usage.py  tenacity_usage.py
python_boilerplate/function/: python_boilerplate_function.py
python_boilerplate/message/: email.py
python_boilerplate/messaging/: sending_email.py
python_boilerplate/repository/: startup_log_repository.py  trace_log_repository.py
python_boilerplate/repository/model/: base_model.py  startup_log.py  trace_log.py  video_game.py
python_boilerplate/repository/model/base/: model.py
python_boilerplate/resources/: application.conf  video_games.csv
python_boilerplate/template/: html_template.py
src/python_boilerplate/: __init__.py  __main__.py
src/python_boilerplate/common/: asynchronization.py  common_function.py  debounce_throttle.py  orm.py  profiling.py  trace.py
src/python_boilerplate/configuration/: application_configuration.py  apscheduler_configuration.py  loguru_configuration.py  peewee_configuration.py  thread_pool_configuration.py
src/python_boilerplate/data_migration/: data_migration.py
src/python_boilerplate/data_migration/video_game/: data_initialization_dml.py
src/python_boilerplate/demo/: arrow_usage.py  async_usage.py  multithread_and_thread_pool_usage.py  pandas_usage.py  pgp_usage.py  pydantic_usage.py  python_dependency_size.py  strategy_design_pattern_usage.py  tenacity_usage.py
src/python_boilerplate/message/: email.py
src/python_boilerplate/repository/: startup_log_repository.py  trace_log_repository.py
src/python_boilerplate/repository/model/: base_model.py  startup_log.py  trace_log.py
src/python_boilerplate/resources/: __init__.py.bak  application.conf
src/python_boilerplate/resources/pgp-keys/: Johnny Miller's PGP Example - Alice_0x3A9AA381_SECRET.asc  Johnny Miller's PGP Example - Alice_0x3A9AA381_public.asc  Johnny Miller's PGP Example - Bob_0xAF34CAD3_SECRET.asc  Johnny Miller's PGP Example - Bob_0xAF34CAD3_public.asc
test/: test_python_boilerplate.py  test_sending_email.py
tests/: conftest.py  test_10_minutes_to_pandas.py
tests/common/: test_asynchronization.py  test_common_function.py  test_debounce_throttle.py  test_function_execution_time.py  test_profiling.py
tests/configuration/: test_application_configuration.py  test_apscheduler_configuration.py  test_loguru_configuration.py  test_peewee_configuration.py  test_thread_pool_configuration.py
tests/demo/: test_arrow_usage.py  test_async_demo.py  test_async_usage.py  test_multithread_and_thread_pool_usage.py  test_pandas_usage.py  test_pgp_usage.py  test_pydantic_usage.py  test_python_dependency_size.py  test_strategy_design_pattern_usage.py  test_tenacity_usage.py
tests/message/: test_email.py
tests/repository/: test_startup_log_repository.py  test_trace_log_repository.py
tests/template/: test_html_template.py
tests/test_python_boilerplate/common/: test_asynchronization.py  test_common_function.py  test_debounce_throttle.py  test_profiling.py
tests/test_python_boilerplate/configuration/: test_application_configuration.py  test_apscheduler_configuration.py  test_loguru_configuration.py  test_peewee_configuration.py  test_thread_pool_configuration.py
tests/test_python_boilerplate/demo/: test_async_usage.py  test_pandas_usage.py  test_pgp_usage.py  test_pydantic_usage.py  test_python_dependency_size.py  test_strategy_design_pattern_usage.py  test_tenacity_usage.py
tests/test_python_boilerplate/message/: test_email.py
tests/test_python_boilerplate/repository/: test_startup_log_repository.py  test_trace_log_repository.py
tests/test_python_boilerplate/template/: test_html_template.py
tweets/2023-03/: 4.0.1-release.tweet
