[metadata]
name = python_boilerplate
version = 5.0.0
description = A boilerplate project for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnnymillergh/python_boilerplate
author = Johnny Miller
author_email = johnnysviva@outlook.com
license = Apache License 2.0
license_file = LICENSE

[flake8]
ignore = E203, E266, E501, W503
; PEP 8 - Maximum Line Length, https://peps.python.org/pep-0008/#maximum-line-length
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
inline-quotes = "
multiline-quotes = "
docstring-quotes = "

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
files = python_boilerplate,tests
cache_dir = ./build/.mypy_cache
ignore_missing_imports = true

[tool:pytest]
testpaths = tests/
cache_dir = ./build/.pytest_cache
