[metadata]
name = python_boilerplate
version = 7.5
description = A boilerplate project for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnnymillergh/python_boilerplate
author = Johnny Miller
author_email = johnnysviva@outlook.com
license = Apache License 2.0
license_file = LICENSE

[flake8]
ignore = E203, E266, E501, W503
; PEP 8 - Maximum Line Length, https://peps.python.org/pep-0008/#maximum-line-length
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
inline-quotes = "
multiline-quotes = "
docstring-quotes = "

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
files = python_boilerplate,tests
cache_dir = ./build/.mypy_cache
ignore_missing_imports = true

# https://docs.pydantic.dev/latest/mypy_plugin/#configuring-the-plugin
plugins = pydantic.mypy
follow_imports = silent
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[tool:pytest]
testpaths = tests/
cache_dir = ./build/.pytest_cache
